Fix bugs: screen overflow, pointer events, onclick

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,8 +30,12 @@ html {
   scroll-behavior: smooth;
 }
 
-img{
+img,p,span,h1,h2,h3,h4{
   user-select: none;
+}
+
+img {
+  pointer-events: none;
 }
 
 
